communication tests added
Server/client functionality related to piggy-backed/separate responses